--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -9,3 +9,4 @@
       loop: "{{ fad_glb_data_centers }}"
       loop_control:
         loop_var: data_center
+        label: "{{ data_center.name }}"
