--- a/examples/fortiadc-glb-data-centers.yaml
+++ b/examples/fortiadc-glb-data-centers.yaml
@@ -11,9 +11,9 @@
 
   roles:
     # uncomment below to test against ansible-galaxy
-    - ndkprd.fortiadc-glb-data-centers
+    # - ndkprd.fortiadc-glb-data-centers
     # uncomment below to test against local (note: this will not pass ansible-lint)
-    # - ../../ansible-role-fortiadc-glb-data-centers
+    - ../../ansible-role-fortiadc-glb-data-centers
 
   # clean-up tasks if you need to delete the resources you just create.
   tasks:
