--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -49,7 +49,7 @@
         % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
         headers=fad_api_header) | from_json).get('payload').mkey is undefined
       changed_when: "fad_glb_data_center_post_results.json.payload == 0"
-      failed_when: "fad_glb_data_center_post_results.json.payload != 0 and fad_glb_data_center_post_results.json.payload != -15"
+      failed_when: "fad_glb_data_center_post_results.json.payload not in [0, -15]"
 
     - name: Update data center entry if it exist and any of its value has changed.
       ansible.builtin.uri:
@@ -80,7 +80,7 @@
         headers=fad_api_header) | from_json).get('payload').location)
       ignore_errors: true
       changed_when: "fad_glb_data_center_put_results.json.payload == 0"
-      failed_when: "fad_glb_data_center_put_results.json.payload != 0 and fad_glb_data_center_put_results.json.payload != -15"
+      failed_when: "fad_glb_data_center_put_results.json.payload not in [0, -15]"
 
     - name: Print out the GLB Data Center values after create/update task.
       ansible.builtin.debug:
