Moved URL to vars file.

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -11,13 +11,15 @@
 
 - name: Create/update GLB Data Center entries.
   tags: [fad_glb_data_centers]
+  vars:
+    fad_glb_data_center_api_endpoint: "{{ fad_base_url + fad_endpoint.glb_data_center }}"
   block:
 
     - name: Print out the GLB Data Center existing values.
       ansible.builtin.debug:
         msg: >
-          {{ (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
-          % (ansible_host, fad_vdom, data_center.name), validate_certs=false,
+          {{ (lookup('url', fad_glb_data_center_api_endpoint
+          % (fad_vdom, data_center.name), validate_certs=false,
           split_lines=false, headers=fad_api_header) | from_json).get('payload') }}
       loop: "{{ fad_glb_data_centers }}"
       loop_control:
@@ -28,7 +30,7 @@
     - name: Create new GLB Data Center entry if entry not found.
       ansible.builtin.uri:
         method: POST
-        url: "https://{{ ansible_host }}/api/global_load_balance_data_center?vdom={{ fad_vdom }}&mkey={{ data_center.name }}"
+        url: "{{ fad_glb_data_center_api_endpoint | format(fad_vdom, data_center.name) }}"
         body_format: "{{ fad_api_uri_params.body_format }}"
         validate_certs: "{{ fad_api_uri_params.validate_certs }}"
         return_content: "{{ fad_api_uri_params.return_content }}"
@@ -45,8 +47,8 @@
         loop_var: data_center
         label: "{{ data_center.name }}"
       when: >
-        (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
-        % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
+        (lookup('url', fad_glb_data_center_api_endpoint
+        % (fad_vdom, data_center.name), validate_certs=false, split_lines=false,
         headers=fad_api_header) | from_json).get('payload').mkey is undefined
       changed_when: "fad_glb_data_center_post_results.json.payload == 0"
       failed_when: "fad_glb_data_center_post_results.json.payload not in [0, -15]"
@@ -54,7 +56,7 @@
     - name: Update data center entry if it exist and any of its value has changed.
       ansible.builtin.uri:
         method: PUT
-        url: "https://{{ ansible_host }}/api/global_load_balance_data_center?vdom={{ fad_vdom }}&mkey={{ data_center.name }}"
+        url: "{{ fad_glb_data_center_api_endpoint | format(fad_vdom, data_center.name) }}"
         body_format: "{{ fad_api_uri_params.body_format }}"
         validate_certs: "{{ fad_api_uri_params.validate_certs }}"
         return_content: "{{ fad_api_uri_params.return_content }}"
@@ -71,12 +73,12 @@
         loop_var: data_center
         label: "{{ data_center.name }}"
       when: >
-        ((lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
-        % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
+        ((lookup('url', fad_glb_data_center_api_endpoint
+        % (fad_vdom, data_center.name), validate_certs=false, split_lines=false,
         headers=fad_api_header) | from_json).get('payload').mkey is defined)
         and
-        (data_center.location != (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
-        % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
+        (data_center.location != (lookup('url', fad_glb_data_center_api_endpoint
+        % (fad_vdom, data_center.name), validate_certs=false, split_lines=false,
         headers=fad_api_header) | from_json).get('payload').location)
       ignore_errors: true
       changed_when: "fad_glb_data_center_put_results.json.payload == 0"
@@ -85,8 +87,8 @@
     - name: Print out the GLB Data Center values after create/update task.
       ansible.builtin.debug:
         msg: >
-          {{ (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
-          % (ansible_host, fad_vdom, data_center.name), validate_certs=false,
+          {{ (lookup('url', fad_glb_data_center_api_endpoint
+          % (fad_vdom, data_center.name), validate_certs=false,
           split_lines=false, headers=fad_api_header) | from_json).get('payload') }}
       loop: "{{ fad_glb_data_centers }}"
       loop_control:
@@ -121,7 +123,7 @@
         #     loop_var: data_center
         #     label: "{{ data_center.name }}"
         #   when: >
-        #     (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
+        #     (lookup('url', fad_glb_data_center_api_endpoint
         #     % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
         #     headers=fad_api_header) | from_json).get('payload').mkey is undefined
         #   changed_when: "fad_glb_data_center_post_results.json.payload == 0"
@@ -178,11 +180,11 @@
     #         loop_var: data_center
     #         label: "{{ data_center.name }}"
     #       when: >
-    #         ((lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
+    #         ((lookup('url', fad_glb_data_center_api_endpoint
     #         % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
     #         headers=fad_api_header) | from_json).get('payload').mkey is defined)
     #         and
-    #         (data_center.location != (lookup('url', 'https://%s/api/global_load_balance_data_center?vdom=%s&mkey=%s'
+    #         (data_center.location != (lookup('url', fad_glb_data_center_api_endpoint
     #         % (ansible_host, fad_vdom, data_center.name), validate_certs=false, split_lines=false,
     #         headers=fad_api_header) | from_json).get('payload').location)
     #       ignore_errors: true
