--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -4,7 +4,7 @@ dependencies: []
 
 galaxy_info:
   author: ndkprd
-  role_name: fortiadc-glb-data-centers
+  role_name: fad_glb_data_center
   description: An Ansible role to create/update Fortinet's FortiADC Global Load Balance Data Center configuration.
   license: MIT
   min_ansible_version: '2.12'
