style: make var name more consistent.

--- a/tests/test.yaml.example
+++ b/tests/test.yaml.example
@@ -38,4 +38,4 @@
           loop: "{{ fad_glb_data_centers }}"
           loop_control:
             label: "{{ item.name }}"
-          tags: [cleanup, fad_glb_data_centers] 
+          tags: [cleanup, fad_glb_data_center] 
